objects/Related_BU_Growth_Opportunities__c.object
<CustomObject>
    <fields>
        <fullName>BU_Growth_Strategy__c</fullName>
        <label>BU Growth Strategy</label>
        <referenceTo>BU_Growth_Strategy__c</referenceTo>
        <relationshipName>Related_BU_Growth_Opportunities</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Related - Opportunities</relationshipLabel>
        <relationshipName>Related_BU_Growth_Opportunities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Unique_Key_RBUO__c</fullName>
        <label>Unique Key RBUO</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Related  BU Growth Opportunities</label>
    <nameField>
        <displayFormat>RBUO-{0000}</displayFormat>
        <label>Related BU Growth Opportunities  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related - Opportunities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>